possibilité de creer un compte, se connecter, deconnecter et d'acceder à la bdd h2-console. Les infos utilisateurs sont enregistrées en bdd. Mot de passe non haché. Les roles et le compte admin sont créés automatiquement au lancement